Fix four auto-updater bugs
Path injection: batch set lines are now quoted with set "VAR=value"
syntax, preventing special characters (&, |, (, ), ^) in the mods
directory path from corrupting or hijacking the watchdog script.

DELLOOP infinite hang: added a 30-attempt retry limit (~60 s) to the
target-file deletion loop; on exhaustion the batch exits with code 1
and writes a .update.log entry so the admin knows what happened.

No startup re-verification: downloadUpdate now writes the verified
SHA-256 to a .pending.sha256 sidecar file. applyPendingUpdate reads
it back and re-checks integrity before moving the file, guarding
against partial downloads that survived a crash between the download
and the original hash check. The sidecar is cleaned up by both the
Java shutdown hook and the Windows watchdog batch.

Deprecated URL constructor: replaced new URL(string) (deprecated since
Java 20) with URI.create(string).toURL() in both download call sites.

Also makes the updater thread a daemon so a slow/hung network request
cannot delay JVM shutdown.

https://claude.ai/code/session_01Ez48j3SzoHgxftf3C6hDo6